fix: Implementacion de Auto- onboardong